--- a/public/index.html
+++ b/public/index.html
@@ -101,7 +101,7 @@
       <div class="articles-grid"><div class="article-x">
             <div class="article-x-flex">
                 <div class="article-1">
-                  <img class="image" src="rog.jpg" alt="">
+                  <img class="image" src="pictures/rog.jpg" alt="">
                 </div>
 
                 <div class="article-description">
@@ -128,7 +128,7 @@
           </div><div class="article-x">
             <div class="article-x-flex">
                 <div class="article-1">
-                  <img class="image" src="programming-background-concept.jpg" alt="">
+                  <img class="image" src="pictures/programming-background-concept.jpg" alt="">
                 </div>
 
                 <div class="article-description">
@@ -145,7 +145,7 @@
                     <div class="text-container">
                       <a href="author.html" target="_blank">
                         <span class="author-name">
-                          Bogdan Grossu
+                          
                         </span>
                       </a>
                     </div>
