--- a/src/admin/index.html
+++ b/src/admin/index.html
@@ -10,5 +10,9 @@
 </head>
 <body>
   <script src="https://unpkg.com/netlify-cms@^0.7.0/dist/cms.js"></script>
+  <script src="https://unpkg.com/netlify-cms@^2.0.0/dist/netlify-cms.js"></script>
+  <script>
+    CMS.registerPreviewStyle("styles/articles/analysis/article-1.css");
+  </script>
 </body>
 </html>
