--- a/src/admin/index.html
+++ b/src/admin/index.html
@@ -10,9 +10,9 @@
 </head>
 <body>
 
-  <script src="https://unpkg.com/netlify-cms@^2.0.0/dist/netlify-cms.js"></script>
+  <script src="https://unpkg.com/netlify-cms@^2.1.0/dist/netlify-cms.js"></script>
   <script>
-    CMS.registerPreviewStyle("./styles/articles/analysis/article-1.css");
+    CMS.registerPreviewStyle("/styles/articles/analysis/article-1.css");
   </script>
 </body>
 </html>
