--- a/src/admin/index.html
+++ b/src/admin/index.html
@@ -13,6 +13,7 @@
   <script src="https://unpkg.com/netlify-cms@^2.1.0/dist/netlify-cms.js"></script>
   <script>
     CMS.registerPreviewStyle("/styles/articles/analysis/article-1.css");
+    CMS.registerPreviewStyle("/general.css");
   </script>
 </body>
 </html>
