--- a/public/index.html
+++ b/public/index.html
@@ -101,6 +101,33 @@
       <div class="articles-grid"><div class="article-x">
             <div class="article-x-flex">
                 <div class="article-1">
+                  <img class="image" src="pictures/Cyber Secuirty.png" alt="">
+                </div>
+
+                <div class="article-description">
+                  <span class="article-date"> <i class="fa fa-calendar"></i> 29 Jun 2023</span>
+
+                  <a href="/blog/2023-06-29-how-to-write-in-c/">
+                    <h2 class="article-title">How to write in C++</h2>
+                  </a>
+
+                  <div class="article-author">
+                    <div class="image-container">
+                      <img class="author-picture" src="./pictures/author-picture.jpeg" alt="">
+                    </div>
+                    <div class="text-container">
+                      <a href="author.html" target="_blank">
+                        <span class="author-name">
+                          Bogdan
+                        </span>
+                      </a>
+                    </div>
+                  </div> 
+                </div>
+            </div>
+          </div><div class="article-x">
+            <div class="article-x-flex">
+                <div class="article-1">
                   <img class="image" src="pictures/rog.jpg" alt="">
                 </div>
 
@@ -128,14 +155,14 @@
           </div><div class="article-x">
             <div class="article-x-flex">
                 <div class="article-1">
-                  <img class="image" src="pictures/programming-background-concept.jpg" alt="">
+                  <img class="image" src="pictures/rog.jpg" alt="">
                 </div>
 
                 <div class="article-description">
                   <span class="article-date"> <i class="fa fa-calendar"></i> 1 Jun 2023</span>
 
                   <a href="/blog/random/">
-                    <h2 class="article-title">I like to eat farts</h2>
+                    <h2 class="article-title">World&#39;s Dirtiest Virus</h2>
                   </a>
 
                   <div class="article-author">
@@ -145,7 +172,7 @@
                     <div class="text-container">
                       <a href="author.html" target="_blank">
                         <span class="author-name">
-                          
+                          Bogdan Grossu
                         </span>
                       </a>
                     </div>
