--- a/public/admin/index.html
+++ b/public/admin/index.html
@@ -9,6 +9,11 @@
   <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
 </head>
 <body>
-  <script src="https://unpkg.com/netlify-cms@^0.7.0/dist/cms.js"></script>
+
+  <script src="https://unpkg.com/netlify-cms@^2.1.0/dist/netlify-cms.js"></script>
+  <script>
+    CMS.registerPreviewStyle("/styles/articles/analysis/article-1.css");
+    CMS.registerPreviewStyle("/general.css");
+  </script>
 </body>
 </html>
